--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "2.1"
 services:
-  ubuntu:
+  ubuntunovnc:
         image: saviorsman/ubuntu-novnc:latest
         ports:
             - 6080:6080
